[[bin]]
name = "conveyorbelt"
path = "src/main.rs"

[dependencies.anyhow]
default-features = false
features = ["backtrace", "std"]
version = "*"

[dependencies.chromiumoxide]
default-features = false
version = "*"

[dependencies.clap]
default-features = false
features = ["derive"]
version = "*"

[dependencies.derive_more]
default-features = false
features = ["deref", "deref_mut"]
version = "*"

[dependencies.futures]
default-features = false
version = "*"

[dependencies.hyper]
default-features = false
features = ["http1", "server"]
version = "0"

[dependencies.ignore-files]
default-features = false
version = "*"

[dependencies.nix]
default-features = false
features = ["signal"]
version = "*"

[dependencies.notify]
default-features = false
version = "*"

[dependencies.process-wrap]
default-features = false
features = ["tokio1"]
version = "*"

[dependencies.replace_with]
default-features = false
features = ["std"]
version = "*"

[dependencies.rxrust]
default-features = false
features = ["scheduler"]
version = "1.0.0-rc.3"

[dependencies.serde]
default-features = false
version = "*"

[dependencies.serde_json]
default-features = false
version = "*"

[dependencies.static-web-server]
default-features = false
version = "*"

[dependencies.tempfile]
default-features = false
version = "*"

[dependencies.tokio]
default-features = false
features = ["io-util", "process"]
version = "*"

[dependencies.tokio-stream]
default-features = false
version = "*"

[dependencies.tracing]
default-features = false
version = "*"

[dependencies.tracing-subscriber]
default-features = false
features = ["env-filter"]
version = "*"

[dependencies.watchexec]
default-features = false
version = "*"

[dependencies.watchexec-events]
default-features = false
version = "*"

[dependencies.watchexec-filterer-ignore]
default-features = false
version = "*"

[dev-dependencies.indoc]
default-features = false
version = "*"

[dev-dependencies.maud]
default-features = false
version = "*"

[dev-dependencies.static_init]
default-features = false
version = "*"

[dev-dependencies.sysinfo]
default-features = false
features = ["system"]
version = "*"

[package]
description = "CLI for web development that watches source, invokes rebuild, statically serves and triggers page reload"
edition = "2024"
license = "MIT"
name = "conveyorbelt"
version = "0.0.0"
