[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies.anyhow]
default-features = false
features = ["backtrace", "std"]
version = "*"

[workspace.dependencies.chromiumoxide]
default-features = false
version = "*"

[workspace.dependencies.clap]
default-features = false
features = ["derive"]
version = "*"

[workspace.dependencies.derive_more]
default-features = false
features = ["deref", "deref_mut", "display", "from"]
version = "*"

[workspace.dependencies.futures]
default-features = false
version = "*"

[workspace.dependencies.git2]
default-features = false
version = "*"

[workspace.dependencies.hyper]
default-features = false
features = ["http1", "server"]
version = "0"

[workspace.dependencies.indoc]
default-features = false
version = "*"

[workspace.dependencies.maud]
default-features = false
version = "*"

[workspace.dependencies.nix]
default-features = false
features = ["signal"]
version = "*"

[workspace.dependencies.notify]
default-features = false
version = "*"

[workspace.dependencies.process-wrap]
default-features = false
features = ["tokio1"]
version = "*"

[workspace.dependencies.replace_with]
default-features = false
features = ["std"]
version = "*"

[workspace.dependencies.rxrust]
default-features = false
features = ["scheduler"]
version = "1.0.0-rc.3"

[workspace.dependencies.serde]
default-features = false
version = "*"

[workspace.dependencies.serde_json]
default-features = false
version = "*"

[workspace.dependencies.static-web-server]
default-features = false
version = "*"

[workspace.dependencies.static_init]
default-features = false
version = "*"

[workspace.dependencies.tempfile]
default-features = false
version = "*"

[workspace.dependencies.tokio]
default-features = false
features = ["io-util", "process"]
version = "*"

[workspace.dependencies.tokio-stream]
default-features = false
version = "*"

[workspace.dependencies.tracing]
default-features = false
version = "*"

[workspace.dependencies.tracing-subscriber]
default-features = false
features = ["env-filter"]
version = "*"

[workspace.package]
edition = "2024"
license = "MIT"
